# tyradex-test

./: .gitignore  main.py  pyproject.toml  test.py
migrations/: 001_initial.py  pokemons.json  types.json
