[tool.poetry]
name = "tyradex-test"
version = "0.1.0"
description = "A Project to test tyradex-api"
authors = ["moi"]
readme = "README.md"
packages = [{include = "tyradex_test"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
